--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-tooltip": "^5.30.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
-    "webpack": "^5.104.1"
+    "webpack": "^5.104.1",
+    "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
