--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@vitejs/plugin-react": "^5.1.2",
-    "vite": "^7.3.0",
-    "webpack-cli": "^6.0.1"
+    "vite": "^7.3.0"
   }
 }
