--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "react-router-dom": "^7.11.0",
     "react-tooltip": "^5.30.0",
     "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.3",
-    "webpack": "^5.104.1",
-    "webpack-cli": "^6.0.1"
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
