--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "@tailwindcss/cli": "^4.1.18",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "emscripten": "^0.0.2-beta",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.11.0",
     "react-tooltip": "^5.30.0",
     "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
