--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/projects/DES_Encryption_Project"]
 	path = src/projects/DES_Encryption_Project
 	url = https://github.com/mackaygrange/DES_Encryption_Project.git
+[submodule "src/projects/RSA_Encryption_Project"]
+	path = src/projects/RSA_Encryption_Project
+	url = https://github.com/mackaygrange/RSA_Encryption_Project.git
