--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.18",
@@ -21,7 +22,10 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
     "@vitejs/plugin-react": "^5.1.2",
+    "eslint": "^9.39.2",
     "vite": "^7.3.0"
   }
 }
