Huge updates to many areas of the site, most notable is the addition of a demo for the emulatorassembler. Will continue adding features until I am happy with it. Caching demo still needs to be implemented. Also changed styling of all buttons to include a small shrink.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "src/projects/RSA_Encryption_Project"]
 	path = src/projects/RSA_Encryption_Project
 	url = https://github.com/mackaygrange/RSA_Encryption_Project.git
+[submodule "src/projects/cs4380-emulator-assembler"]
+	path = src/projects/cs4380-emulator-assembler
+	url = https://github.com/mackaygrange/cs4380-emulator-assembler.git
+
